--- a/src/static/assets/css/templatemo-lugx-gaming.css
+++ b/src/static/assets/css/templatemo-lugx-gaming.css
@@ -651,7 +651,7 @@ Banner Style
 */
 
 .main-banner {
-  background-image: url(../images/banner-bg.jpg);
+  background-image: url(../images/bannermuelle-bg.jpg);
   border-radius: 0px 0px 150px 150px;
   background-position: center bottom;
   background-repeat: no-repeat;
