--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -135,24 +135,24 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="section-heading">
-            <h6>Trending</h6>
-            <h2>Trending Games</h2>
+            <h6>Tendencia</h6>
+            <h2>Productos en tendencia</h2>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="main-button">
-            <a href="shop.html">View All</a>
+            <a href="{{ url_for('shop') }}">Ver TODOS</a>
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="{{ url_for('static', filename='assets/images/trending-01.jpg') }}" alt=""></a>
-              <span class="price"><em>$28</em>$20</span>
+              <a href="product-details.html"><img src="{{ url_for('static', filename='assets/images/cania.jpeg') }}" alt=""></a>
+              <span class="price"><em>S/.28</em>S/.20</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
+              <span class="category">Equipos de pesca</span>
+              <h4>Caña de pescar</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -160,12 +160,12 @@
         <div class="col-lg-3 col-md-6">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="{{ url_for('static', filename='assets/images/trending-02.jpg') }}" alt=""></a>
-              <span class="price">$44</span>
+              <a href="product-details.html"><img src="{{ url_for('static', filename='assets/images/bonito.jpg') }}" alt=""></a>
+              <span class="price">S/.44</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
+              <span class="category">Pescados frescos</span>
+              <h4>Bonito</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -173,12 +173,12 @@
         <div class="col-lg-3 col-md-6">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="{{ url_for('static', filename='assets/images/trending-03.jpg') }}" alt=""></a>
-              <span class="price"><em>$64</em>$44</span>
+              <a href="product-details.html"><img src="{{ url_for('static', filename='assets/images/remo.jpeg') }}" alt=""></a>
+              <span class="price"><em>S/.64</em>S/.44</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
+              <span class="category">Accesorios Náuticos</span>
+              <h4>Par de remos de cedro</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -186,12 +186,12 @@
         <div class="col-lg-3 col-md-6">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="{{ url_for('static', filename='assets/images/trending-04.jpg') }}" alt=""></a>
-              <span class="price">$32</span>
+              <a href="product-details.html"><img src="{{ url_for('static', filename='assets/images/chaleco.jpeg') }}" alt=""></a>
+              <span class="price">S/.32</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
+              <span class="category">Ropa y Accesorios</span>
+              <h4>Chaleco con multiples bolsillos</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -205,13 +205,13 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="section-heading">
-            <h6>TOP GAMES</h6>
-            <h2>Most Played</h2>
+            <h6>LOS MEJORES PRODUCTOS</h6>
+            <h2>Más comprados</h2>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="main-button">
-            <a href="shop.html">View All</a>
+            <a href="shop.html">Ver TODOS</a>
           </div>
         </div>
         <div class="col-lg-2 col-md-6 col-sm-6">
@@ -295,47 +295,47 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <div class="section-heading">
-            <h6>Categories</h6>
-            <h2>Top Categories</h2>
+            <h6>Categorias</h6>
+            <h2>Nuestras categorías</h2>
           </div>
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Pescados Frescos</h4>
             <div class="thumb">
-              <a href="product-details.html"><img src="{{ url_for('static', filename='assets/images/categories-01.jpg') }}" alt=""></a>
+              <a href="product-details.html"><img src="{{ url_for('static', filename='assets/images/pescadosfrescos.jpeg') }}" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Mariscos</h4>
             <div class="thumb">
-              <a href="product-details.html"><img src="{{ url_for('static', filename='assets/images/categories-02.jpg') }}" alt=""></a>
+              <a href="product-details.html"><img src="{{ url_for('static', filename='assets/images/mariscos.jpeg') }}" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Equipos de Pesca</h4>
             <div class="thumb">
-              <a href="product-details.html"><img src="{{ url_for('static', filename='assets/images/categories-03.jpg') }}" alt=""></a>
+              <a href="product-details.html"><img src="{{ url_for('static', filename='assets/images/accesoriospesca.jpeg') }}" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Ropa y Accesorios</h4>
             <div class="thumb">
-              <a href="product-details.html"><img src="{{ url_for('static', filename='assets/images/categories-04.jpg') }}" alt=""></a>
+              <a href="product-details.html"><img src="{{ url_for('static', filename='assets/images/indumentarias.jpeg') }}" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Accesorios Náuticos</h4>
             <div class="thumb">
-              <a href="product-details.html"><img src="{{ url_for('static', filename='assets/images/categories-05.jpg') }}" alt=""></a>
+              <a href="product-details.html"><img src="{{ url_for('static', filename='assets/images/nauticos.jpeg') }}" alt=""></a>
             </div>
           </div>
         </div>
