--- a/src/static/assets/css/templatemo-lugx-gaming.css
+++ b/src/static/assets/css/templatemo-lugx-gaming.css
@@ -1019,7 +1019,7 @@ CTA Style
 }
 
 .cta::after {
-  background-image: url(../images/cta-bg.jpg);
+  background-image: url(../images/muellechorillos.jpeg);
   max-width: 550px;
   max-height: 510px;
   width: 100%;
